@@ -12,7 +12,7 @@
 #define IGPROF_HOOK(type, fun, myfun) \
     static IgHook::TypedData<type> myfun##_hook = { { 0, #fun, 0, &myfun, 0, 0, 0 } }
 
-#define IGPROF_LIBHOOK(type, fun, lib, myfun) \
+#define IGPROF_LIBHOOK(lib, type, fun, myfun) \
     static IgHook::TypedData<type> myfun##_hook = { { 0, #fun, lib, &myfun, 0, 0, 0 } }
 
 #define IGPROF_ASSERT(expr) \
